force-app/main/default/objects/LogRecording__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duration in ms</description>
    <inlineHelpText>Duration in ms</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>