force-app/main/default/objects/LogRecording__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Time recording ended (if applicable)</description>
    <inlineHelpText>Time recording ended (if applicable)</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>