force-app/main/default/objects/LogRecording__c/fields/ExceptionLineNumber__c.field-meta.xml
<CustomField>
    <fullName>ExceptionLineNumber__c</fullName>
    <label>Exception Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>