force-app/main/default/objects/LogRecording__c/fields/IsBatch__c.field-meta.xml
<CustomField>
    <fullName>IsBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when executed from a batch</description>
    <inlineHelpText>True when executed from a batch</inlineHelpText>
    <label>Batch</label>
    <type>Checkbox</type>
</CustomField>