force-app/main/default/objects/LogRecording__c/fields/IsFuture__c.field-meta.xml
<CustomField>
    <fullName>IsFuture__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True when executed from a future method</inlineHelpText>
    <label>Future</label>
    <type>Checkbox</type>
</CustomField>