force-app/main/default/objects/LogRecording__c/fields/IsQueueable__c.field-meta.xml
<CustomField>
    <fullName>IsQueueable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True when executed from a queueable</inlineHelpText>
    <label>Queueable</label>
    <type>Checkbox</type>
</CustomField>