force-app/main/default/objects/LogRecording__c/fields/IsScheduled__c.field-meta.xml
<CustomField>
    <fullName>IsScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True when executed from a scheduled class</inlineHelpText>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>