force-app/main/default/objects/LogRecording__c/fields/RunningUser__c.field-meta.xml
<CustomField>
    <fullName>RunningUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Running User when error occurred.</description>
    <inlineHelpText>Running User when error occurred.</inlineHelpText>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LogRecordings</relationshipName>
    <type>Lookup</type>
</CustomField>