force-app/main/default/objects/LogRecording__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Time recording began (if applicable)</description>
    <inlineHelpText>Time recording began (if applicable)</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>