force-app/main/default/objects/LogRecording__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ErrorId__c</columns>
    <columns>RunningUser__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>Duration__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>